--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build Ameba Project
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    branches: [master]
 
 jobs:
   build-amebalite-project:
