--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Compile
       run: |
-        make all
+        make
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
