--- a/.github/workflows/build_template_amebadplus.yml
+++ b/.github/workflows/build_template_amebadplus.yml
@@ -1,4 +1,4 @@
-name: Reusable amebalite workflow template
+name: Reusable amebadplus workflow template
 
 on:
   workflow_call:
@@ -20,7 +20,7 @@ on:
         required: false
 
 jobs:
-  build-template-amebalite:
+  build-template-amebadplus:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -31,16 +31,16 @@ jobs:
       run: |
         # set config
 
-        if ${{ inputs.artifacts_name == 'amebalite-B1' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config BT1
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config IPC
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config AUDIO_MIXER
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config TRUSTZONE
+        if ${{ inputs.artifacts_name == 'amebadplus-B1' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT1
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config IPC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config AUDIO_MIXER
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config TRUSTZONE
         fi
 
     - name: Compile
       run: |
-        cd amebalite_gcc_project
+        cd amebadplus_gcc_project
         make all
         cd -
     - name: Upload artifacts
@@ -48,8 +48,8 @@ jobs:
       with:
         name: ${{ inputs.artifacts_name }}
         path: |
-          amebalite_gcc_project/menuconfig/.config
-          amebalite_gcc_project/menuconfig/.config_kr4
-          amebalite_gcc_project/menuconfig/.config_km4
-          amebalite_gcc_project/project_km4/asdk/image
-          amebalite_gcc_project/project_kr4/vsdk/image
+          amebadplus_gcc_project/menuconfig/.config
+          amebadplus_gcc_project/menuconfig/.config_kr4
+          amebadplus_gcc_project/menuconfig/.config_km4
+          amebadplus_gcc_project/project_km4/asdk/image
+          amebadplus_gcc_project/project_kr4/vsdk/image
