--- a/.github/workflows/build_template_amebadplus.yml
+++ b/.github/workflows/build_template_amebadplus.yml
@@ -12,7 +12,7 @@ on:
         type: string
     # parameters from upstream inherit
     secrets:
-      TOKEN_AMEBALITE:
+      TOKEN_AMEBADPLUS:
         required: false
       TOKEN_AMEBASMART:
         required: false
@@ -33,9 +33,25 @@ jobs:
 
         if ${{ inputs.artifacts_name == 'amebadplus-B1' }}; then
           ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT1
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config IPC
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config AUDIO_MIXER
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config TRUSTZONE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config AUDIO_PASSTHROUGH
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebadplus-B2' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config HIGH_TP_FOR_INIC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config WPS
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebadplus-B3' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT2
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config USB_KM4_DEVICE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebadplus-B5' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT_MP_SHRINK
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebadplus-B6' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT_MP_EXPAND
         fi
 
     - name: Compile
