--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -38,6 +38,37 @@ jobs:
           ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config TRUSTZONE
         fi
 
+        if ${{ inputs.artifacts_name == 'amebalite-B2' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config LITE_CROSS
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config IPC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config AUDIO_MIXER_CROSS
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config TRUSTZONE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebalite-B3' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config IPC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config AUDIO_PASSTHROUGH
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config TRUSTZONE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebalite-B4' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config LITE_CROSS
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config BT2
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config IPC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config AUDIO_PASSTHROUGH_CROSS
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config TRUSTZONE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebalite-B5' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config MP
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config BT_EN
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebalite-B6' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config MP_NORMAL
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBALITE --config BT_EN
+        fi
+
     - name: Compile
       run: |
         cd amebalite_gcc_project
