--- a/.github/workflows/build_template_amebasmart.yml
+++ b/.github/workflows/build_template_amebasmart.yml
@@ -13,7 +13,7 @@ on:
         type: string
     # parameters from upstream inherit
     secrets:
-      TOKEN_AMEBALITE:
+      TOKEN_AMEBASMART:
         required: false
       TOKEN_AMEBASMART:
         required: false
@@ -38,6 +38,37 @@ jobs:
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_MIXER
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_AP_DEVICE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebasmart-B2' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_MIXER_SINGLECORE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_AP_HOST
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebasmart-B3' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config BT2
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config IPC
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_PASSTHROUGH
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_HP_DEVICE
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebasmart-B4' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config BT3
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_PASSTHROUGH_SINGLECORE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_HP_HOST
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebasmart-B5' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config MP
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config BT_EN
+        fi
+
+        if ${{ inputs.artifacts_name == 'amebasmart-B6' }}; then
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config MP_NORMAL
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config BT_EN
         fi
 
     - name: Compile
