--- a/.github/workflows/build_template_amebasmart.yml
+++ b/.github/workflows/build_template_amebasmart.yml
@@ -13,7 +13,7 @@ on:
         type: string
     # parameters from upstream inherit
     secrets:
-      TOKEN_AMEBASMART:
+      TOKEN_AMEBALITE:
         required: false
       TOKEN_AMEBASMART:
         required: false
@@ -37,13 +37,14 @@ jobs:
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config IPC
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_MIXER
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config VFS_FATFS
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_AP_DEVICE
+          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_AP_HOST
         fi
 
         if ${{ inputs.artifacts_name == 'amebasmart-B2' }}; then
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_MIXER_SINGLECORE
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_AP_HOST
         fi
 
         if ${{ inputs.artifacts_name == 'amebasmart-B3' }}; then
@@ -58,7 +59,6 @@ jobs:
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config BT3
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config AUDIO_PASSTHROUGH_SINGLECORE
           ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config TRUSTZONE
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBASMART --config USB_HP_HOST
         fi
 
         if ${{ inputs.artifacts_name == 'amebasmart-B5' }}; then
