--- a/.github/workflows/build_template_amebasmart.yml
+++ b/.github/workflows/build_template_amebasmart.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         python-version: '3.11'
     - name: Configure prerequisites
+      shell: bash
       run: |
         # set config
 
@@ -72,6 +73,7 @@ jobs:
         fi
 
     - name: Compile
+      shell: bash
       run: |
         cd amebasmart_gcc_project
         make all
