--- a/.github/workflows/build_template_amebadplus.yml
+++ b/.github/workflows/build_template_amebadplus.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         python-version: '3.11'
     - name: Configure prerequisites
+      shell: bash
       run: |
         # set config
 
@@ -55,6 +56,7 @@ jobs:
         fi
 
     - name: Compile
+      shell: bash
       run: |
         cd amebadplus_gcc_project
         make all
