--- a/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
+++ b/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
@@ -47,8 +47,8 @@ WIFIMAKEDIR	= $(BASEDIR)/component/wifi/wifi_make
 BUILDDIR	= $(ROOTDIR)/build
 PHERIEXAMPLE	= $(ROOTDIR)/../example/demo_peripheral
 # -----------------------------------------------------------------------------
-PREPENDTOOL		= sh $(UTILITYDIR)/prepend_header.sh
-OTAPREPENDTOOL  = $(UTILITYDIR)/prepend_ota_header.sh
+PREPENDTOOL		= $(CONFIG_SHELL) $(UTILITYDIR)/prepend_header.sh
+OTAPREPENDTOOL  = $(CONFIG_SHELL) $(UTILITYDIR)/prepend_ota_header.sh
 COMPRESSTOOL = python $(UTILITYDIR)/compresstool.py
 LXDIALOG_CYGWIN_STATIC 	= $(UTILITYDIR)/lxdialog_prebuilt/lxdialog_cygwin_x86_static.exe
 COMPILEOS		= $(shell uname -o)
