--- a/amebasmart_gcc_project/project_ap/asdk/Makefile
+++ b/amebasmart_gcc_project/project_ap/asdk/Makefile
@@ -336,10 +336,10 @@ fip_image:
 	@echo "========== Image manipulating start =========="
 	@#link ca32_image2_all.bin to gen fip.bin
 	@make -C make/atf image
-	$(Q) sh $(KM4_BUILDDIR)/asdk/gnu_utility/pad.sh $(IMAGE_TARGET_FOLDER)/bl1_sram.bin 32
-	$(Q) sh $(KM4_BUILDDIR)/asdk/gnu_utility/pad.sh $(IMAGE_TARGET_FOLDER)/bl1.bin 32
-	$(Q) sh $(KM4_BUILDDIR)/asdk/gnu_utility/pad.sh $(IMAGE_TARGET_FOLDER)/fip.bin 32
-	$(Q) sh $(KM4_BUILDDIR)/asdk/gnu_utility/pad.sh $(IMAGE_TARGET_FOLDER)/xip_image2.bin 32
+	$(Q) $(PADTOOL) $(IMAGE_TARGET_FOLDER)/bl1_sram.bin 32
+	$(Q) $(PADTOOL) $(IMAGE_TARGET_FOLDER)/bl1.bin 32
+	$(Q) $(PADTOOL) $(IMAGE_TARGET_FOLDER)/fip.bin 32
+	$(Q) $(PADTOOL) $(IMAGE_TARGET_FOLDER)/xip_image2.bin 32
 
 	$(Q)$(PREPENDTOOL) $(IMAGE_TARGET_FOLDER)/xip_image2.bin  __flash_text_start__  $(IMAGE_TARGET_FOLDER)/target_img2.map
 	$(Q)$(PREPENDTOOL) $(IMAGE_TARGET_FOLDER)/bl1_sram.bin  __ca32_bl1_sram_start__  $(IMAGE_TARGET_FOLDER)/target_img2.map
@@ -347,14 +347,14 @@ fip_image:
 	$(Q)$(PREPENDTOOL) $(IMAGE_TARGET_FOLDER)/fip.bin  __ca32_fip_dram_start__  $(IMAGE_TARGET_FOLDER)/target_img2.map
 	@cat $(IMAGE_TARGET_FOLDER)/xip_image2_prepend.bin $(IMAGE_TARGET_FOLDER)/bl1_sram_prepend.bin $(IMAGE_TARGET_FOLDER)/bl1_prepend.bin $(IMAGE_TARGET_FOLDER)/fip_prepend.bin > $(IMAGE_TARGET_FOLDER)/ap_image_all.bin
 
-	$(Q)$(KM4_BUILDDIR)/asdk/gnu_utility/image_tool/imagetool.sh $(IMAGE_TARGET_FOLDER)/ap_image_all.bin $(BUILD_TYPE)
+	$(Q)$(IMAGETOOL) $(IMAGE_TARGET_FOLDER)/ap_image_all.bin $(BUILD_TYPE)
 
 ifeq ($(CONFIG_FATFS_WITHIN_APP_IMG), y)
 	@if [ -f $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app.bin ] && [ -f $(BASEDIR)/amebasmart_gcc_project/fatfs.bin ]; then \
 		mv $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app.bin $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_tmp.bin; \
 		mv $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns.bin $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns_tmp.bin; \
-		sh $(UTILITYDIR)/pad.sh $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_tmp.bin 4096; \
-		sh $(UTILITYDIR)/pad.sh $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns_tmp.bin 4096; \
+		$(PADTOOL) $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_tmp.bin 4096; \
+		$(PADTOOL) $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns_tmp.bin 4096; \
 		$(PREPENDTOOL) $(BASEDIR)/amebasmart_gcc_project/fatfs.bin  VFS1_FLASH_BASE_ADDR  $(AP_IMAGEDIR)/target_img2.map; \
 		cat $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_tmp.bin $(BASEDIR)/amebasmart_gcc_project/fatfs_prepend.bin > $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app.bin; \
 		cat $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns_tmp.bin $(BASEDIR)/amebasmart_gcc_project/fatfs_prepend.bin > $(KM4_BUILDDIR)/asdk/image/km0_km4_ca32_app_ns.bin; \
@@ -390,7 +390,10 @@ endif
 
 	@rm -f $(IMAGE_TARGET_FOLDER)/*prepend.bin
 	@$(COPY) $(IMAGE_TARGET_FOLDER)/*rom* $(ROM_LIB_DIR)
-	@$(COPY) ./build/atf/bl1/{*.dump,*.elf,*.ld,*.map} $(ROM_LIB_DIR)
+	@$(COPY) ./build/atf/bl1/*.dump $(ROM_LIB_DIR)
+	@$(COPY) ./build/atf/bl1/*.elf $(ROM_LIB_DIR)
+	@$(COPY) ./build/atf/bl1/*.ld $(ROM_LIB_DIR)
+	@$(COPY) ./build/atf/bl1/*.map $(ROM_LIB_DIR)
 
 	@echo "========== Image manipulating end =========="
 
