--- a/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
+++ b/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
@@ -49,6 +49,10 @@ PHERIEXAMPLE	= $(ROOTDIR)/../example/demo_peripheral
 # -----------------------------------------------------------------------------
 PREPENDTOOL		= $(CONFIG_SHELL) $(UTILITYDIR)/prepend_header.sh
 OTAPREPENDTOOL  = $(CONFIG_SHELL) $(UTILITYDIR)/prepend_ota_header.sh
+PAD16TOOL = $(CONFIG_SHELL) $(UTILITYDIR)/pad16.sh
+PADTOOL = $(CONFIG_SHELL) $(UTILITYDIR)/pad.sh
+IMAGETOOL = $(CONFIG_SHELL) $(UTILITYDIR)/image_tool/imagetool.sh
+BINARY_PADING = $(CONFIG_SHELL) $(UTILITYDIR)/binary_pading.sh
 COMPRESSTOOL = python $(UTILITYDIR)/compresstool.py
 LXDIALOG_CYGWIN_STATIC 	= $(UTILITYDIR)/lxdialog_prebuilt/lxdialog_cygwin_x86_static.exe
 COMPILEOS		= $(shell uname -o)
