add actions workflow

--- a/.github/workflows/build_template_amebasmart.yml
+++ b/.github/workflows/build_template_amebasmart.yml
@@ -28,6 +28,10 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
+    - name: Configure bash
+      run: |
+        sudo ln -sf /bin/bash /bin/sh
+
     - name: Configure prerequisites
       shell: bash
       run: |
