--- a/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
+++ b/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
@@ -472,7 +472,7 @@ define download_toolchain_func
 	fi
 endef
 
-CURRENTVER = $(shell $(CC) --version)
+CURRENTVER = `$(CC) --version`
 define check_toolchain_version_func
 	@if [ $(findstring $(TOOLCHAINVER), $(CURRENTVER)) ]; then \
 		echo "Toolchain Version Matched"; \
