--- a/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
+++ b/amebalite_gcc_project/project_km4/asdk/Makefile.include.gen
@@ -472,12 +472,13 @@ define download_toolchain_func
 	fi
 endef
 
-CURRENTVER = $(shell $(CC) --version)
+CURRENTVER = `$(CC) --version`
 define check_toolchain_version_func
 	@if [ $(findstring $(TOOLCHAINVER), $(CURRENTVER)) ]; then \
 		echo "Toolchain Version Matched"; \
 	else \
 		echo "$(CURRENTVER)"; \
+		echo "$(findstring $(TOOLCHAINVER), $(CURRENTVER))"; \
 		echo "Warning: Current Toolchain Version Mismatched!"; \
 		echo "Warning: Please delete current toolchain /asdk-$(ASDK_VER) in $(TOOLCHAINDIR) and redo make. The Latest ToolChain $(TOOLCHAINNAME) will be installed automatically during the project building"; \
 		exit 1; \
