--- a/.github/workflows/build_template_amebadplus.yml
+++ b/.github/workflows/build_template_amebadplus.yml
@@ -36,32 +36,29 @@ jobs:
         # set config
 
         if ${{ inputs.artifacts_name == 'amebadplus-B1' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT1
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config AUDIO_PASSTHROUGH
+          ./amebadplus_gcc_project/menuconfig.py -f bt1.conf audio_passthrough.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B2' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config HIGH_TP_FOR_INIC
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config WPS
+          ./amebadplus_gcc_project/menuconfig.py -f high_tp.conf wps.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B3' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT2
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config USB_KM4_DEVICE
+          ./amebadplus_gcc_project/menuconfig.py -f bt2.conf usb.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B5' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT_MP_SHRINK
+          ./amebadplus_gcc_project/menuconfig.py -f bt_en.conf mp_shrink.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B6' }}; then
-          ./tools/build_check/rtl_sdk_config.py --chip AMEBADPLUS --config BT_MP_EXPAND
+          ./amebadplus_gcc_project/menuconfig.py -f bt_en.conf mp_expand.conf
         fi
 
     - name: Compile
       run: |
         cd amebadplus_gcc_project
-        make all
+        ./build.py
         cd -
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
