--- a/.github/workflows/build_template_amebadplus.yml
+++ b/.github/workflows/build_template_amebadplus.yml
@@ -38,23 +38,23 @@ jobs:
         cd amebadplus_gcc_project
 
         if ${{ inputs.artifacts_name == 'amebadplus-B1' }}; then
-          ./menuconfig.py -f menuconfig/confs_daily_build/bt1.conf menuconfig/confs_daily_build/audio_passthrough.conf
+          ./menuconfig.py -f bt1.conf audio_passthrough.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B2' }}; then
-          ./menuconfig.py -f menuconfig/confs_daily_build/high_tp.conf menuconfig/confs_daily_build/wps.conf
+          ./menuconfig.py -f high_tp.conf wps.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B3' }}; then
-          ./menuconfig.py -f menuconfig/confs_daily_build/bt2.conf menuconfig/confs_daily_build/usb.conf
+          ./menuconfig.py -f bt2.conf usb.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B5' }}; then
-          ./menuconfig.py -f menuconfig/confs_daily_build/bt_en.conf menuconfig/confs_daily_build/mp_shrink.conf
+          ./menuconfig.py -f bt_en.conf mp_shrink.conf
         fi
 
         if ${{ inputs.artifacts_name == 'amebadplus-B6' }}; then
-          ./menuconfig.py -f menuconfig/confs_daily_build/bt_en.conf menuconfig/confs_daily_build/mp_expand.conf
+          ./menuconfig.py -f bt_en.conf mp_expand.conf
         fi
 
         cd -
