update actions workflow

--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -30,6 +30,12 @@ jobs:
     - name: Configure bash
       run: |
         sudo ln -sf /bin/bash /bin/sh
+
+    - name: Use updated PATH
+      env:
+        PATH: /opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin/:$PATH
+      run: |
+        echo $PATH
   
     - name: Configure prerequisites
       run: |
