update actions workflow

--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -32,9 +32,8 @@ jobs:
         sudo ln -sf /bin/bash /bin/sh
 
     - name: Use updated PATH
-      env:
-        TOOLCHAIN_PATH: /opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin
       run: |
+        echo "export PATH=\$PATH:/opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin"
         echo $PATH
   
     - name: Configure prerequisites
