update actions workflow

--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Use updated PATH
       run: |
-        echo "export PATH=\$PATH:/opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin"
+        export PATH=$PATH:/opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin
         echo $PATH
   
     - name: Configure prerequisites
