--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,7 @@ jobs:
       - name: Validate commit message
         run: |
           if [ git log -1 --pretty=%B | grep "Change-Id:" ]]; then
+            echo "Valid commit message"
           else
             echo "Invalid commit message!!"
             echo "git log -1 --pretty=%B"
