--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,7 +135,7 @@ jobs:
 
       - name: Validate commit message
         run: |
-          if [ git log -1 --pretty=%B | grep "Change-Id:" ]]; then
+          if [ git log -1 --pretty=%B | grep "Change-Id:" ]; then
             echo "Valid commit message"
           else
             echo "Invalid commit message!!"
