--- a/.github/workflows/ameba_build_system.yml
+++ b/.github/workflows/ameba_build_system.yml
@@ -2,7 +2,8 @@ name: Unified Ameba RTOS Build System
 
 on:
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*_sync_*'
 
 jobs:
   multi-platform-builds: 
